<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:transitionName="@string/transition_login_register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/login_top_bg">
        <include layout="@layout/top_layout" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/login_container_bg"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/name_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            />

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/semi_margin"
            android:background="@drawable/et_bg"
            android:inputType="text"
            android:longClickable="false"
            android:textColor="@color/colorPrimaryDark_login"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/threefourth_padding" />
        <TextView
            android:id="@+id/tv_register_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/email_hint"
            android:textColor="@color/white"
            android:transitionName="@string/emailtext_login_register"
            android:textSize="@dimen/text_size_medium"
            />
        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/semi_margin"
            android:background="@drawable/et_bg"
            android:inputType="textEmailAddress"
            android:longClickable="false"
            android:textColor="@color/colorPrimaryDark_login"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="@dimen/threefourth_padding"
            android:textSize="@dimen/text_size_medium"
            android:transitionName="@string/email_login_register"/>

        <TextView
            android:id="@+id/tv_register_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/white"
            android:transitionName="@string/passwordtext_login_register"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/semi_margin"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textColor="@color/colorPrimaryDark_login"
            android:maxLength="30"
            android:maxLines="1"
            android:padding="@dimen/threefourth_padding"
            android:textSize="@dimen/text_size_medium"
            android:transitionName="@string/password_login_register"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/line_login" />

        <TextView
            android:id="@+id/tv_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/register_btn_txt"
            android:textColor="@color/white"
            android:transitionName="@string/register_login_register"
            android:textSize="@dimen/text_size_large"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_login" />


    </LinearLayout>

</LinearLayout>
