<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:background="@drawable/container_bg"
        android:orientation="vertical"
        android:paddingTop="@dimen/double_margin"
        android:paddingRight="@dimen/double_margin"
        android:paddingEnd="@dimen/double_margin"
        android:paddingLeft="@dimen/double_margin"
        android:paddingStart="@dimen/double_margin">

        <TextView
            android:id="@+id/tv_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/email_hint"
            android:textColor="@color/white"
            android:transitionName="@string/emailtext_login_register"
            android:textSize="@dimen/text_size_medium"/>


        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/semi_margin"
            android:background="@drawable/et_bg"
            android:inputType="textEmailAddress"
            android:longClickable="false"
            android:textColor="@color/text_color"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/threefourth_padding" />

        <TextView
            android:id="@+id/tv_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/password"
            android:textColor="@color/white"
            android:transitionName="@string/passwordtext_login_register"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/semi_margin"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:longClickable="false"
            android:textColor="@color/text_color"
            android:maxLength="30"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/threefourth_padding" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/line" />

        <TextView
            android:id="@+id/tv_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/login_btn_txt"
            android:textColor="@color/white"
            android:transitionName="@string/transition_login_main"
            android:textSize="@dimen/text_size_large"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <TextView
            android:id="@+id/tv_login_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:padding="@dimen/default_padding"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:padding="@dimen/double_margin"
            android:text="@string/register_btn_txt"
            android:textColor="@color/white"
            android:transitionName="@string/transition_login_register"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>

</LinearLayout>
