<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:transitionName="@string/transition_adminhome_wrkreport">

    <include layout="@layout/item_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/container_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/work_reports"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:transitionName="@string/txt_adminhome_wrkreport"
                android:textSize="@dimen/text_size_large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/quad_margin"
                android:background="@color/home_btn_strock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/select_users"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quad_margin"
                android:background="@drawable/et_bg">

                <Spinner
                    android:id="@+id/spnr_admin_work_report_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:id="@+id/iv_admin_site_report_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/default_padding"
                    android:src="@drawable/down_arrow"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/users_history"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"
                    android:transitionName="@string/txt_usershome_history" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/quad_margin"
                    android:background="@color/home_btn_strock" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/semi_padding"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_admin_history_daily"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/daily"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/quad_margin"
                        android:background="@color/home_btn_strock" />

                    <TextView
                        android:id="@+id/tv_admin_history_monthly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="@string/monthly"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/home_btn_strock" />


                <include layout="@layout/admin_daily_layout" />

                <include layout="@layout/admin_monthly_layout" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
