<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:transitionName="@string/transition_usershome_device_change">

    <include layout="@layout/item_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/container_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/users_change_device"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:transitionName="@string/txt_usershome_device_change" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/quad_margin"
                android:background="@color/users_home_btn_strock" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/imei"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
            <EditText
                android:id="@+id/et_users_change_device_imei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/semi_margin"
                android:background="@drawable/et_bg"
                android:inputType="text"
                android:longClickable="false"
                android:textColor="@color/text_color"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="@dimen/semi_padding" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/default_margin"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/reason"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />
            <EditText
                android:id="@+id/et_users_change_device_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/semi_margin"
                android:background="@drawable/et_bg"
                android:inputType="textCapWords|textMultiLine"
                android:gravity="top"
                android:lines="2"
                android:longClickable="false"
                android:maxLength="30"
                android:maxLines="2"
                android:padding="@dimen/threefourth_padding"
                android:textColor="@color/text_color"  />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/users_home_btn_strock" />

            <TextView
                android:id="@+id/tv_users_change_device_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/request"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/users_home_btn_strock" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
